<resources>
    <string name="app_name">The Stout Scout</string>
    <string name="button_addPub">Add Pub</string>
    <string name="hint_stoutscoutTitle">Pub Title</string>
    <string name="hint_pubLocation">Location</string>
    <string name="menu_addPub">Add</string>
    <string name="menu_cancelPub">Cancel</string>
    <string name="enter_pub_title"> Please enter a Pub Title </string>
    <string name="save_pub"> Save Pub </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_pub_image">Select pub image</string>
    <string name="change_pub_image">Change pub image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="menu_deletePub">Delete</string>
</resources>